examples/errors/not_existent_class_declaration.olang
Program: Main

class Main is
    this() is
        var a : A
        a := A()
    end
end
